# Sotol

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Binaries/: SotolEditor.ilk  info.txt
Engine/Shaders/: info.txt
Engine/Source/: CMakeLists.txt
Engine/Source/Editor/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.h  main.cpp
Engine/Source/Runtime/: CMakeLists.txt  info.txt
Engine/Source/Runtime/Core/: CMakeLists.txt  Core.h
Engine/Source/Runtime/Core/Application/: Application.cpp  Application.h  Log.cpp  Log.h  Window.h
Engine/Source/Runtime/Core/Containers/: Vector.h
Engine/Source/Runtime/Core/HAL/: Allocator.h  Platform.h
Engine/Source/Runtime/Core/Windows/: WindowsPlatform.h
Engine/Source/Runtime/RenderCore/: info.txt
Engine/Source/Runtime/Renderer/: CMakeLists.txt  info.txt
